1999-12-18  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* configure.in: Define SCM_MUTEX_INIT_TWO_ARGS if scm_mutex_init
	takes an extra attributes arg.
	
	* guile-tcl.c (scm_init_gtcl): Conditionally add extra arg to
	scm_mutex_init.

1999-03-04  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* tcltk.scm (tk-widget): Also accept strings as widget names.
	(Added for vbackward compatibility.)

	New automake: 1.4
	* config.guess, config.sub, install-sh, mdate-sh, missing,
	mkinstalldirs: New versions.
	* Makefile.in, aclocal.m4, configure: Regenerated.

1998-11-29  Marius Vollmer  <mvo@zagadka.ping.de>

	Using the dynlink approach from guile-gtk.
	
	* gtcltk.scm, dynlink.scm, guiledlopenhelper.c: New files.
	
	* configure.in: Do not add Guile libraries to $LIBS.  Instead, put
	them in $GUILE_LIBS and AC_SUBST that.

	* gtcltk-module.c (scm_init_gtcltk): Made non-static.
	(scm_init_tcltk_gtcltk_module): Register as the magic "tcltk
	%static-initfuncs% scm_init_gtcltk" module.

	* Makefile.am (lib_LTLIBRARIES): Added libguiledlopenhelper.la
	(guile_tcltk_LDADD): Added $(GUILE_LIBS).  They are no longer
	contained in $(LIBS) because libgtcltk should not reference them.
	(libguiledlopenhelper_la_SOURCES,
	libguiledlopenhelper_la_LDFLAGS): New.
	(subpkgdata_DATA): Added dynlink.scm and gtcltk.scm.
	(install-exec-hook): Commented out; no longer needed.
	
1998-11-27  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* tcltk.scm: Export a widget command `top' for the top level
	window ".".
	Re-export bindings from the gtcltk module.
	(tcl-get-var): Return contents of tcl variable NAME in
	the-interpreter.
	(tcl-get-number): Return number in tcl variable NAME.

1998-11-24  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* Makefile.am (install-exec-hook): Do test -r instead of test -e
	in order to be backward compatible.

1998-11-24  Mikael Djurfeldt  <mdj@barbara.nada.kth.se>

	* configure.in: Check if we have guile-config or build-guile.
